--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "fastify": "^4.12.0",
     "mongoose": "^6.9.0"
   }
