--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.2.0",
+    "axios": "^1.3.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fastify": "^4.12.0",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.9.0",
+    "qrcode": "^1.5.1"
   }
 }
